Added Decision Tree

--- a/01_NaiveBayes.ipynb
+++ b/01_NaiveBayes.ipynb
@@ -35,24 +35,12 @@
     "## Introduction\n",
     "* Naive Bayes is a **supervised classification** technique based on Bayes' Theorem\n",
     "* The algorithm creates a **decision surface** to classify data based on **features** (characteristics)\n",
-    "### INSERT GRAPHICS HERE ###"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "\n",
     "## Bayes' Rule\n",
     "* Bayes' rule calculates the probability of an outcome given a **prior**\n",
     "    * e.g. probability of you selling an icecream (outcome) given the sunny weather (prior)\n",
     "* Given multiple priors, the Naive Bayes algorithm determines which outcome is most likely\n",
-    "    \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "    \n",
     "## Considerations\n",
     "### Use Cases\n",
     "* Text classification\n",
@@ -65,8 +53,7 @@
     "\n",
     "### Cons\n",
     "* Does not consider word orders and phrases\n",
-    "    * e.g. \"Chicago Bulls\" is not recognized as a sports team and instead recognized as a city and an animal\n",
-    "\n"
+    "    * e.g. \"Chicago Bulls\" is not recognized as a sports team and instead recognized as a city and an animal\n"
    ]
   },
   {
